--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ path = "src/main.rs"
 [dependencies]
 clap = { version="4.0", features=["derive"] }
 anyhow = "1.0"
+log = "0.4.29"
+env_logger = "0.11.8"
